Abril 2022 - Calculador con teclado Matricial - Solo aspecto

--- a/index.html
+++ b/index.html
@@ -233,6 +233,22 @@
         <div id="input_texto">
             <label for="pantalla">Número:</label>
             <input type="text" id="pantalla">
+            <div id="tecladoMatricial">
+                <h4>Teclado Matricial</h4>
+                <div id="teclas">
+                    <button id="b1">1</button>
+                    <button id="b2">2</button>
+                    <button id="b3">3</button>
+                    <button id="b4">4</button>
+                    <button id="b5">5</button>
+                    <button id="b6">6</button>
+                    <button id="b7">7</button>
+                    <button id="b8">8</button>
+                    <button id="b9">9</button>
+                    <button id="bp">.</button>
+                    <button id="bC">C</button>
+                </div>
+            </div>
         </div>
 
         <h2 id="info" class="grande" title="Info sobre el número">Info sobre el número</h2>
