Manejo de eventos de botón con onClick

--- a/index.html
+++ b/index.html
@@ -236,17 +236,17 @@
             <div id="tecladoMatricial">
                 <h4>Teclado Matricial</h4>
                 <div id="teclas">
-                    <button id="b1">1</button>
-                    <button id="b2">2</button>
-                    <button id="b3">3</button>
-                    <button id="b4">4</button>
-                    <button id="b5">5</button>
-                    <button id="b6">6</button>
-                    <button id="b7">7</button>
-                    <button id="b8">8</button>
-                    <button id="b9">9</button>
-                    <button id="bp">.</button>
-                    <button id="bC">C</button>
+                    <button onclick="">1</button>
+                    <button onclick="">2</button>
+                    <button onclick="">3</button>
+                    <button onclick="">4</button>
+                    <button onclick="">5</button>
+                    <button onclick="">6</button>
+                    <button onclick="">7</button>
+                    <button onclick="">8</button>
+                    <button onclick="">9</button>
+                    <button onclick="">.</button>
+                    <button onclick="">C</button>
                 </div>
             </div>
         </div>
