Botones de Limpieza

--- a/index.html
+++ b/index.html
@@ -263,6 +263,12 @@
             <button id="logaritmo">ln(x)</button>
         </div>
 
+        <h3 class="cabecera" title="Unitarias">Limpieza</h3>
+        <div class="operaciones">
+            <button id="clearScreen">C</button>
+            <button id="clearAll">AC</button>
+        </div>
+        
         <h4 id="subtituloLn">El resultado del ln(x) es igual a:<span id="resultadoLn"></span></h4>
 
         <h4>Input comparador:</h4>
