--- a/index.html
+++ b/index.html
@@ -232,6 +232,9 @@
                 document.getElementById("division").addEventListener("click", div);
                 document.getElementById("igual").addEventListener("click", eq);
 
+                //LIMPIEZA
+                document.getElementById("clearScreen").addEventListener("click", vaciarInput);
+
                 // MANEJO DE PULSACIÓN AL INPUT
                 document.getElementById("input_texto").addEventListener("click", vaciarInput);
 
@@ -268,7 +271,7 @@
             <button id="clearScreen">C</button>
             <button id="clearAll">AC</button>
         </div>
-        
+
         <h4 id="subtituloLn">El resultado del ln(x) es igual a:<span id="resultadoLn"></span></h4>
 
         <h4>Input comparador:</h4>
