Ejercicios Práctica 3 - Ejercicio 1 - Esqueleto Básico

--- a/index.html
+++ b/index.html
@@ -339,5 +339,20 @@
             <p>Número de clicks: <span id="contadorClicks">0</span></p>
             <button id="ocultador">Púlsame 3 veces y ocultaré cosis</button>
         </div>
+
+        <h2>Ejercicios Práctica 3 - Calculadora JS</h2>
+
+        <div class="operaciones">
+            <button id="cuadrado"> x<sup>2</sup></button>
+            <button id="factorial"> x! </button>
+        </div>
+
+        <div class="operaciones">
+            <button id="suma"> + </button>
+            <button id="resta"> - </button>
+            <button id="multiplicacion"> * </button>
+            <button id="division"> / </button>
+            <button id="igual"> = </button>
+        </div>
     </body>
 </html>
