Eliminar clases innecesarias

--- a/index.html
+++ b/index.html
@@ -350,12 +350,12 @@
 
         <h3>Interface en estado: <span id="modoLiteTitle"></span></h3>
 
-        <div class="operaciones">
+        <div>
             <button id="cuadrado"> x<sup>2</sup></button>
             <button id="factorial"> x! </button>
         </div>
 
-        <div class="operaciones">
+        <div>
             <button id="suma"> + </button>
             <button id="resta"> - </button>
             <button id="multiplicacion"> * </button>
