Funcionalidad en ONELINER

--- a/index.html
+++ b/index.html
@@ -241,6 +241,13 @@
                 else{
                     contenedorOcultable.style.display = "none";
                 }
+
+                /*
+                El mismo código puede expresarse en una línea como:
+
+                contenedorOcultable.style.display = modoLite ? "none" : null;
+
+                */
             };
 
             const onload = () => {
