--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>Mayo 2019 - Pregunta 5</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="styles.css">
         <script type="text/javascript">
             const initialQuizzes = [
                 {
