--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                                 <h2>Pregunta ${quiz.id}:</h2>
                                 <h3>${quiz.question}</h3>
                                 <h3>Respuesta: ${quiz.answer}</h3>
+                                <button onclick="duplicarPregunta(${quiz.id})">Duplicar Pregunta</button>
                             </div>
                         `;
                     }, stringInicialAcumulador
@@ -49,6 +50,23 @@
                         <h4>Número de preguntas: ${quizzes.length}</h4>
                     </div>
                 `;
+            };
+
+            const duplicarPregunta = (idADuplicar) => {
+                let preguntaADuplicar = initialQuizzes.find(quiz => quiz.id === idADuplicar);
+
+        let htmlPreguntaADuplicar = `
+            <div>
+                <h2>Pregunta ${preguntaADuplicar.id}:</h2>
+                <h3>${preguntaADuplicar.question}</h3>
+                <h3>Respuesta: ${preguntaADuplicar.answer}</h3>
+                <button onclick="duplicarPregunta(${preguntaADuplicar.id})">Duplicar Pregunta</button>
+            </div>
+        `;
+
+                let contenidoActual = document.getElementById("main").innerHTML;
+
+                document.getElementById("main").innerHTML = contenidoActual += htmlPreguntaADuplicar;
             };
 
             const onload = () => {
