--- a/index.html
+++ b/index.html
@@ -370,17 +370,18 @@
             <button id="ocultador">Púlsame 3 veces y ocultaré cosis</button>
         </div>
 
-        <h2>Ejercicios Práctica 3 - Calculadora JS</h2>
+        <div style="background-color: lightpink; border: 2px solid salmon; padding: 8px;">
+            <h2>Ejercicios Práctica 3 - Calculadora JS</h2>
 
-        <h3>Interface en estado: <span id="modoLiteTitle"></span></h3>
-        <button id="lite">Modo Lite</button>
+            <h3>Interface en estado: <span id="modoLiteTitle"></span></h3>
+            <button id="lite">Modo Lite</button>
 
-        <div id="vistaFull">
-            <button id="cuadrado"> x<sup>2</sup></button>
-            <button id="factorial"> x! </button>
-        </div>
+            <div id="vistaFull">
+                <button id="cuadrado"> x<sup>2</sup></button>
+                <button id="factorial"> x! </button>
+            </div>
 
-        <div>
+            <div>
             <button id="suma"> + </button>
             <button id="resta"> - </button>
             <button id="multiplicacion"> * </button>
