--- a/index.html
+++ b/index.html
@@ -382,6 +382,28 @@
             </div>
 
             <div>
+                <button id="suma"> + </button>
+                <button id="resta"> - </button>
+                <button id="multiplicacion"> * </button>
+                <button id="division"> / </button>
+                <button id="igual"> = </button>
+            </div>
+        </div>
+
+
+
+        <div style="background-color: lightgoldenrodyellow; border: 2px solid olive; padding: 8px;">
+            <h2>DIRECTO Ejercicios Práctica 3 - Calculadora JS</h2>
+
+            <h3>Interface en estado: <span id="modoLiteTitle"></span></h3>
+            <button id="botonLiteDIRECTO">
+                Modo <span id="modoActivo">Lite</span></button>
+
+            <div id="vistaFull" style="border: 1px solid blue;">
+                <button id="cuadrado"> x<sup>2</sup></button>
+                <button id="factorial"> x! </button>
+            </div>
+
             <button id="suma"> + </button>
             <button id="resta"> - </button>
             <button id="multiplicacion"> * </button>
